[gd_scene load_steps=23 format=3 uid="uid://d3puoo113oejg"]

[ext_resource type="Script" path="res://scenes/game/character/moot.gd" id="1_3v1lq"]
[ext_resource type="Script" path="res://scenes/game/character/character.gd" id="2_yrmfp"]
[ext_resource type="Script" path="res://scenes/game/character/teleporter.gd" id="3_qusfo"]
[ext_resource type="Texture2D" uid="uid://bok5q7sxwnfus" path="res://assets/sprites/character/guidelines/Head.png" id="4_bdw1t"]
[ext_resource type="Texture2D" uid="uid://drypq4jdrky7g" path="res://assets/sprites/character/guidelines/3_piece.png" id="5_5rgid"]
[ext_resource type="Script" path="res://scenes/game/modules/weapon_collision.gd" id="6_wbyqw"]
[ext_resource type="Texture2D" uid="uid://cnhkrdor3gjqg" path="res://assets/sprites/character/guidelines/2_piece.png" id="7_yfark"]
[ext_resource type="Texture2D" uid="uid://die5me60kg1r5" path="res://assets/sprites/character/guidelines/4_piece.png" id="8_lqokr"]
[ext_resource type="Texture2D" uid="uid://bxptvxqf04n31" path="res://assets/sprites/particle/FireSpriteSheet.png" id="8_nxik3"]
[ext_resource type="PackedScene" uid="uid://b1sal3rtbhiur" path="res://scenes/game/modules/ui.tscn" id="9_24o6c"]
[ext_resource type="PackedScene" uid="uid://cmj0xfyl2c61u" path="res://scenes/game/modules/health.tscn" id="10_f477k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uy5s7"]
radius = 137.015

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1mgu1"]
radius = 60.0
height = 362.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0shxj"]
radius = 60.0
height = 348.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p1dhm"]
radius = 62.0322

[sub_resource type="CircleShape2D" id="CircleShape2D_i1s7v"]
radius = 62.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jdqi4"]
radius = 60.0
height = 242.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_um6wg"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_757fr"]
lifetime_randomness = 1.0
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 960.0
emission_ring_inner_radius = 840.0
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
anim_offset_max = 1.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8dup2"]
radius = 60.0333
height = 461.142

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gd1qp"]
radius = 60.3683
height = 481.231

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_dbfux"]
properties/0/path = NodePath("../Character/Head:glo_pos")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath("../Character/Head:glo_rot")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath("../Character/Body:glo_pos")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false
properties/3/path = NodePath("../Character/Body:glo_rot")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = false
properties/4/path = NodePath("../Character/RLA:glo_pos")
properties/4/spawn = true
properties/4/sync = true
properties/4/watch = false
properties/5/path = NodePath("../Character/RLA:glo_rot")
properties/5/spawn = true
properties/5/sync = true
properties/5/watch = false
properties/6/path = NodePath("../Character/RUA:glo_pos")
properties/6/spawn = true
properties/6/sync = true
properties/6/watch = false
properties/7/path = NodePath("../Character/RUA:glo_rot")
properties/7/spawn = true
properties/7/sync = true
properties/7/watch = false
properties/8/path = NodePath("../Character/RF:glo_pos")
properties/8/spawn = true
properties/8/sync = true
properties/8/watch = false
properties/9/path = NodePath("../Character/RF:glo_rot")
properties/9/spawn = true
properties/9/sync = true
properties/9/watch = false
properties/10/path = NodePath("../Character/LLA:glo_pos")
properties/10/spawn = true
properties/10/sync = true
properties/10/watch = false
properties/11/path = NodePath("../Character/LLA:glo_rot")
properties/11/spawn = true
properties/11/sync = true
properties/11/watch = false
properties/12/path = NodePath("../Character/LUA:glo_pos")
properties/12/spawn = true
properties/12/sync = true
properties/12/watch = false
properties/13/path = NodePath("../Character/LUA:glo_rot")
properties/13/spawn = true
properties/13/sync = true
properties/13/watch = false
properties/14/path = NodePath("../Character/LF:glo_pos")
properties/14/spawn = true
properties/14/sync = true
properties/14/watch = false
properties/15/path = NodePath("../Character/LF:glo_rot")
properties/15/spawn = true
properties/15/sync = true
properties/15/watch = false
properties/16/path = NodePath("../Character/Hip:glo_pos")
properties/16/spawn = true
properties/16/sync = true
properties/16/watch = false
properties/17/path = NodePath("../Character/Hip:glo_rot")
properties/17/spawn = true
properties/17/sync = true
properties/17/watch = false
properties/18/path = NodePath("../Character/RLL:glo_pos")
properties/18/spawn = true
properties/18/sync = true
properties/18/watch = false
properties/19/path = NodePath("../Character/RLL:glo_rot")
properties/19/spawn = true
properties/19/sync = true
properties/19/watch = false
properties/20/path = NodePath("../Character/RUL:glo_pos")
properties/20/spawn = true
properties/20/sync = true
properties/20/watch = false
properties/21/path = NodePath("../Character/RUL:glo_rot")
properties/21/spawn = true
properties/21/sync = true
properties/21/watch = false
properties/22/path = NodePath("../Character/RK:glo_pos")
properties/22/spawn = true
properties/22/sync = true
properties/22/watch = false
properties/23/path = NodePath("../Character/RK:glo_rot")
properties/23/spawn = true
properties/23/sync = true
properties/23/watch = false
properties/24/path = NodePath("../Character/Stomach:glo_pos")
properties/24/spawn = true
properties/24/sync = true
properties/24/watch = false
properties/25/path = NodePath("../Character/Stomach:glo_rot")
properties/25/spawn = true
properties/25/sync = true
properties/25/watch = false
properties/26/path = NodePath("../Character/LLL:glo_pos")
properties/26/spawn = true
properties/26/sync = true
properties/26/watch = false
properties/27/path = NodePath("../Character/LLL:glo_rot")
properties/27/spawn = true
properties/27/sync = true
properties/27/watch = false
properties/28/path = NodePath("../Character/LUL:glo_pos")
properties/28/spawn = true
properties/28/sync = true
properties/28/watch = false
properties/29/path = NodePath("../Character/LUL:glo_rot")
properties/29/spawn = true
properties/29/sync = true
properties/29/watch = false
properties/30/path = NodePath("../Character/LK:glo_pos")
properties/30/spawn = true
properties/30/sync = true
properties/30/watch = false
properties/31/path = NodePath("../Character/LK:glo_rot")
properties/31/spawn = true
properties/31/sync = true
properties/31/watch = false

[node name="Moot" type="Node2D"]
script = ExtResource("1_3v1lq")

[node name="Character" type="Node2D" parent="."]
script = ExtResource("2_yrmfp")

[node name="Head" type="RigidBody2D" parent="Character" groups=["Damagable", "Damager"]]
position = Vector2(0, -120)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_qusfo")

[node name="Sprite" type="Sprite2D" parent="Character/Head"]
position = Vector2(0, -105)
texture = ExtResource("4_bdw1t")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Character/Head"]
position = Vector2(0, -135)
shape = SubResource("CircleShape2D_uy5s7")

[node name="HB" type="DampedSpringJoint2D" parent="Character/Head"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB2" type="DampedSpringJoint2D" parent="Character/Head"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB3" type="PinJoint2D" parent="Character/Head"]
node_a = NodePath("..")
node_b = NodePath("../../Body")

[node name="HB4" type="DampedSpringJoint2D" parent="Character/Head"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="HB5" type="DampedSpringJoint2D" parent="Character/Head"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="Body" type="RigidBody2D" parent="Character" groups=["Damagable"]]
mass = 0.1
center_of_mass_mode = 1
center_of_mass = Vector2(0, -107)
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_qusfo")

[node name="Sprite" type="Sprite2D" parent="Character/Body"]
texture = ExtResource("5_5rgid")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/Body"]
shape = SubResource("CapsuleShape2D_1mgu1")

[node name="RLA" type="RigidBody2D" parent="Character" groups=["Damagable"]]
position = Vector2(240, 0)
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_qusfo")

[node name="Sprite" type="Sprite2D" parent="Character/RLA"]
position = Vector2(-0.000427246, -120)
texture = ExtResource("5_5rgid")

[node name="RRA" type="DampedSpringJoint2D" parent="Character/RLA"]
position = Vector2(57.0001, -1.52588e-05)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA2" type="DampedSpringJoint2D" parent="Character/RLA"]
position = Vector2(-57, 1.52588e-05)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA3" type="PinJoint2D" parent="Character/RLA"]
rotation = -1.5708
node_a = NodePath("../../RUA")
node_b = NodePath("..")

[node name="RRA4" type="DampedSpringJoint2D" parent="Character/RLA"]
position = Vector2(57.0001, -1.52588e-05)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA5" type="DampedSpringJoint2D" parent="Character/RLA"]
position = Vector2(-57, 1.52588e-05)
node_a = NodePath("../../RUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/RLA"]
position = Vector2(-0.000396729, -113)
shape = SubResource("CapsuleShape2D_0shxj")

[node name="RUA" type="RigidBody2D" parent="Character" groups=["Damagable"]]
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_qusfo")

[node name="Sprite" type="Sprite2D" parent="Character/RUA"]
position = Vector2(-0.000442505, -120)
texture = ExtResource("5_5rgid")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/RUA"]
position = Vector2(-0.000442505, -120)
shape = SubResource("CapsuleShape2D_1mgu1")

[node name="BRA" type="DampedSpringJoint2D" parent="Character/RUA"]
position = Vector2(57, -1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA2" type="DampedSpringJoint2D" parent="Character/RUA"]
position = Vector2(-57, 1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA3" type="PinJoint2D" parent="Character/RUA"]
rotation = -1.5708
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BRA4" type="DampedSpringJoint2D" parent="Character/RUA"]
position = Vector2(57, -1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BRA5" type="DampedSpringJoint2D" parent="Character/RUA"]
position = Vector2(-57, 1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="RF" type="RigidBody2D" parent="Character" groups=["Damager"]]
position = Vector2(480, 0)
mass = 0.1
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_qusfo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/RF"]
shape = SubResource("CircleShape2D_p1dhm")

[node name="RF" type="PinJoint2D" parent="Character/RF"]
node_a = NodePath("../../RLA")
node_b = NodePath("..")
bias = 0.9

[node name="Sprite" type="Sprite2D" parent="Character/RF"]
script = ExtResource("6_wbyqw")

[node name="RRA" type="DampedSpringJoint2D" parent="Character/RF"]
position = Vector2(0, -59)
rotation = 1.5708
node_a = NodePath("../../RLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA2" type="DampedSpringJoint2D" parent="Character/RF"]
position = Vector2(0, 59)
rotation = 1.5708
node_a = NodePath("../../RLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA4" type="DampedSpringJoint2D" parent="Character/RF"]
position = Vector2(0, -59)
rotation = 1.5708
node_a = NodePath("../../RLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RRA5" type="DampedSpringJoint2D" parent="Character/RF"]
position = Vector2(0, 59)
rotation = 1.5708
node_a = NodePath("../../RLA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA" type="RigidBody2D" parent="Character" groups=["Damagable"]]
position = Vector2(-240, 0)
rotation = -1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_qusfo")

[node name="Sprite" type="Sprite2D" parent="Character/LLA"]
position = Vector2(0.000473022, -120)
texture = ExtResource("5_5rgid")

[node name="LLA" type="DampedSpringJoint2D" parent="Character/LLA"]
position = Vector2(57, 0)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA2" type="DampedSpringJoint2D" parent="Character/LLA"]
position = Vector2(57, 0)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA3" type="PinJoint2D" parent="Character/LLA"]
rotation = -1.5708
node_a = NodePath("../../LUA")
node_b = NodePath("..")

[node name="LLA4" type="DampedSpringJoint2D" parent="Character/LLA"]
position = Vector2(57, 0)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="LLA5" type="DampedSpringJoint2D" parent="Character/LLA"]
position = Vector2(57, 0)
node_a = NodePath("../../LUA")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/LLA"]
position = Vector2(0.000473022, -113)
shape = SubResource("CapsuleShape2D_0shxj")

[node name="LUA" type="RigidBody2D" parent="Character" groups=["Damagable"]]
rotation = 1.5708
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_qusfo")

[node name="Sprite" type="Sprite2D" parent="Character/LUA"]
position = Vector2(0.000442505, 120)
texture = ExtResource("5_5rgid")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/LUA"]
position = Vector2(0.000442505, 120)
shape = SubResource("CapsuleShape2D_1mgu1")

[node name="BLA" type="DampedSpringJoint2D" parent="Character/LUA"]
position = Vector2(57.0001, -1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA2" type="DampedSpringJoint2D" parent="Character/LUA"]
position = Vector2(-57, 1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA3" type="PinJoint2D" parent="Character/LUA"]
rotation = -1.5708
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BLA4" type="DampedSpringJoint2D" parent="Character/LUA"]
position = Vector2(57.0001, -1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BLA5" type="DampedSpringJoint2D" parent="Character/LUA"]
position = Vector2(-57, 1.14441e-05)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="LF" type="RigidBody2D" parent="Character" groups=["Damager"]]
position = Vector2(-480, 0)
mass = 0.1
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_qusfo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/LF"]
shape = SubResource("CircleShape2D_p1dhm")

[node name="LF" type="PinJoint2D" parent="Character/LF"]
node_a = NodePath("../../LLA")
node_b = NodePath("..")

[node name="LK" type="RigidBody2D" parent="Character" groups=["Damager"]]
position = Vector2(-360, 984)
mass = 0.01
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_qusfo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/LK"]
shape = SubResource("CircleShape2D_i1s7v")

[node name="LK" type="PinJoint2D" parent="Character/LK"]
node_a = NodePath("../../LLL")
node_b = NodePath("..")

[node name="Hip" type="RigidBody2D" parent="Character" groups=["Damagable"]]
position = Vector2(0, 240)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_qusfo")

[node name="Sprite" type="Sprite2D" parent="Character/Hip"]
position = Vector2(0, 60)
texture = ExtResource("7_yfark")

[node name="BH" type="DampedSpringJoint2D" parent="Character/Hip"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH2" type="DampedSpringJoint2D" parent="Character/Hip"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH3" type="PinJoint2D" parent="Character/Hip"]
node_a = NodePath("../../Stomach")
node_b = NodePath("..")

[node name="BH4" type="DampedSpringJoint2D" parent="Character/Hip"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="BH5" type="DampedSpringJoint2D" parent="Character/Hip"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Stomach")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/Hip"]
position = Vector2(0, 60)
shape = SubResource("CapsuleShape2D_jdqi4")

[node name="Center" type="Marker2D" parent="Character/Hip"]
position = Vector2(0, 120)

[node name="Radius" type="Marker2D" parent="Character/Hip/Center"]
position = Vector2(840, 0)

[node name="FireRing" type="GPUParticles2D" parent="Character/Hip/Center"]
material = SubResource("CanvasItemMaterial_um6wg")
emitting = false
amount = 1000
process_material = SubResource("ParticleProcessMaterial_757fr")
texture = ExtResource("8_nxik3")
lifetime = 0.5
local_coords = true

[node name="RLL" type="RigidBody2D" parent="Character" groups=["Damagable"]]
position = Vector2(180, 672)
rotation = -0.506145
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_qusfo")

[node name="Sprite" type="Sprite2D" parent="Character/RLL"]
position = Vector2(0, 180)
texture = ExtResource("8_lqokr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/RLL"]
position = Vector2(0, 170)
shape = SubResource("CapsuleShape2D_8dup2")

[node name="RRL" type="DampedSpringJoint2D" parent="Character/RLL"]
position = Vector2(59, 0)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL2" type="DampedSpringJoint2D" parent="Character/RLL"]
position = Vector2(59, 0)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL3" type="PinJoint2D" parent="Character/RLL"]
node_a = NodePath("../../RUL")
node_b = NodePath("..")

[node name="RRL4" type="DampedSpringJoint2D" parent="Character/RLL"]
position = Vector2(-59, 0)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RRL5" type="DampedSpringJoint2D" parent="Character/RLL"]
position = Vector2(-59, 0)
node_a = NodePath("..")
node_b = NodePath("../../RUL")
length = 1.0
stiffness = 64.0

[node name="RUL" type="RigidBody2D" parent="Character" groups=["Damagable"]]
position = Vector2(0, 360)
rotation = -0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_qusfo")

[node name="Sprite" type="Sprite2D" parent="Character/RUL"]
position = Vector2(0, 180)
texture = ExtResource("8_lqokr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/RUL"]
position = Vector2(0, 180)
shape = SubResource("CapsuleShape2D_gd1qp")

[node name="HRL" type="DampedSpringJoint2D" parent="Character/RUL"]
position = Vector2(59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL2" type="DampedSpringJoint2D" parent="Character/RUL"]
position = Vector2(59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL3" type="PinJoint2D" parent="Character/RUL"]
node_a = NodePath("../../Hip")
node_b = NodePath("..")

[node name="HRL4" type="DampedSpringJoint2D" parent="Character/RUL"]
position = Vector2(-59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL5" type="DampedSpringJoint2D" parent="Character/RUL"]
position = Vector2(-59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="RK" type="RigidBody2D" parent="Character" groups=["Damager"]]
position = Vector2(355, 987)
mass = 0.01
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_qusfo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/RK"]
shape = SubResource("CircleShape2D_i1s7v")

[node name="RK" type="PinJoint2D" parent="Character/RK"]
node_a = NodePath("../../RLL")
node_b = NodePath("..")

[node name="Stomach" type="RigidBody2D" parent="Character" groups=["Damagable"]]
position = Vector2(0, 120)
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_qusfo")

[node name="Sprite" type="Sprite2D" parent="Character/Stomach"]
position = Vector2(0, 60)
texture = ExtResource("7_yfark")

[node name="BH" type="DampedSpringJoint2D" parent="Character/Stomach"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH2" type="DampedSpringJoint2D" parent="Character/Stomach"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH3" type="PinJoint2D" parent="Character/Stomach"]
node_a = NodePath("../../Body")
node_b = NodePath("..")

[node name="BH4" type="DampedSpringJoint2D" parent="Character/Stomach"]
position = Vector2(-57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="BH5" type="DampedSpringJoint2D" parent="Character/Stomach"]
position = Vector2(57, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
length = 1.0
stiffness = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/Stomach"]
position = Vector2(0, 60)
shape = SubResource("CapsuleShape2D_jdqi4")

[node name="LLL" type="RigidBody2D" parent="Character" groups=["Damagable"]]
position = Vector2(-180, 672)
rotation = 0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_qusfo")

[node name="Sprite" type="Sprite2D" parent="Character/LLL"]
position = Vector2(0, 180)
texture = ExtResource("8_lqokr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/LLL"]
position = Vector2(0, 170)
shape = SubResource("CapsuleShape2D_8dup2")

[node name="RRL" type="DampedSpringJoint2D" parent="Character/LLL"]
position = Vector2(59, 0)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="RRL2" type="DampedSpringJoint2D" parent="Character/LLL"]
position = Vector2(59, 0)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="RRL3" type="PinJoint2D" parent="Character/LLL"]
node_a = NodePath("../../LUL")
node_b = NodePath("..")

[node name="RRL4" type="DampedSpringJoint2D" parent="Character/LLL"]
position = Vector2(-59, 0)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="RRL5" type="DampedSpringJoint2D" parent="Character/LLL"]
position = Vector2(-59, 0)
node_a = NodePath("..")
node_b = NodePath("../../LUL")
length = 1.0
stiffness = 64.0

[node name="LUL" type="RigidBody2D" parent="Character" groups=["Damagable"]]
position = Vector2(0, 360)
rotation = 0.523599
mass = 0.1
gravity_scale = 0.5
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("3_qusfo")

[node name="Sprite" type="Sprite2D" parent="Character/LUL"]
position = Vector2(0, 180)
texture = ExtResource("8_lqokr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/LUL"]
position = Vector2(0, 180)
shape = SubResource("CapsuleShape2D_gd1qp")

[node name="HRL" type="DampedSpringJoint2D" parent="Character/LUL"]
position = Vector2(59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL2" type="DampedSpringJoint2D" parent="Character/LUL"]
position = Vector2(59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL3" type="PinJoint2D" parent="Character/LUL"]
node_a = NodePath("../../Hip")
node_b = NodePath("..")

[node name="HRL4" type="DampedSpringJoint2D" parent="Character/LUL"]
position = Vector2(-59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="HRL5" type="DampedSpringJoint2D" parent="Character/LUL"]
position = Vector2(-59, 0)
node_a = NodePath("../../Hip")
node_b = NodePath("..")
length = 1.0
stiffness = 64.0

[node name="Extra" type="Node2D" parent="."]

[node name="HitCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="SkillCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="InvulnerabilityCooldown" type="Timer" parent="Extra"]
one_shot = true

[node name="UI" parent="Extra" instance=ExtResource("9_24o6c")]

[node name="Health" parent="Extra" instance=ExtResource("10_f477k")]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="Extra"]
replication_config = SubResource("SceneReplicationConfig_dbfux")

[node name="SkillDuration" type="Timer" parent="Extra"]
one_shot = true
